--- a/client/lab_2/styles.css
+++ b/client/lab_2/styles.css
@@ -14,7 +14,7 @@
   
   a:hover {
     background-color: springgreen;
-    display: inline-block;
+    display: inline;
     border-radius: 2px;
   }
   
