--- a/client/lab_3/styles.css
+++ b/client/lab_3/styles.css
@@ -1,1 +1,107 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.top-bar{
+    background-color: rgb(13, 170, 118);
+}
+
+.menu-container{
+    color: white;
+    background-color: #5995DA;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.menu{
+    border: 1px solid #fff;
+    width: 900px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.links{
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.main-page{
+    margin-left: 20px;
+}
+
+.header-container{
+    color: #5995DA;
+    background-color:  #D6E9FE;
+    display: flex;
+    justify-content: center;
+}
+
+.header{
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.project-link, .github{
+    align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.photo-grid-container{
+    display: flex;
+    justify-content: center;
+}
+
+.photo-grid{
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;   
+    flex-direction: row-reverse;
+}
+
+.photo-grid-item{
+    border: 1px solid white;
+    width: 300px;
+    height: 300px;   
+}
+
+.first-item{
+    order: 1
+}
+
+.last-item{
+    order: -1
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item{
+    border: 1px solid white;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-one, .footer-three{
+    background-color: #5995DA;
+    flex: initial;
+    width: 300px;
+}
+
+@media only screen and (max-width: 600px) {
+    img{
+        max-width: 100%
+    }
+}
+
 
