--- a/client/lab_4/styles.css
+++ b/client/lab_4/styles.css
@@ -62,15 +62,15 @@
     overflow: hidden;
     position: relative;
     max-width: 600px;
+    max-height: 600px;
 }
 
 .carousel .carousel-item{
-    display: none;  
+    display: none;
 }
 
 .carousel .carousel-item img{
     width: 600px;
-    height: 600px;
     height: auto;
 }
 
