--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -9,7 +9,8 @@ body {
   padding: 0;
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
     ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
-  background-color: darkslategray;
+  background-color: rgb(189, 134, 94);
+  min-height: 100%;
 }
 
 /* Page Layout */
@@ -24,4 +25,12 @@ body {
 .container {
   max-width: 960px;
   margin-top: 25px;
+}
+
+.box.title{
+  background-color: rgb(241, 187, 153);
+}
+
+html {
+  height: 100%;
 }
